Fix tables on mobile

--- a/sass/gutenberg/blocks/_core-table.scss
+++ b/sass/gutenberg/blocks/_core-table.scss
@@ -1,9 +1,9 @@
-/* stylelint-disable no-descending-specificity */
+// stylelint-disable no-descending-specificity
 // Core/table block
 // Table heading cells
 th {
   backface-visibility: hidden;
-  background-color: var(--color-scropion);
+  background-color: var(--color-scorpion);
   color: var(--color-white);
   font-weight: var(--font-weight-bold);
   overflow: hidden;
@@ -52,22 +52,16 @@ table {
   border-spacing: 0;
 }
 
-.wp-block-table {
-  @media (max-width: $width-grid-base + 40px) {
-    width: calc(100% - calc(var(--padding-container-horizontal) * 2));
-  }
-}
-
 .wp-block-table.alignfull {
-  margin-left: var(--padding-container-horizontal);
-  margin-right: var(--padding-container-horizontal);
+  margin-left: 0;
+  margin-right: 0;
   width: calc(100% - calc(var(--padding-container-horizontal) * 2));
 }
 
 @media (max-width: $width-grid-base + 40px) {
   .wp-block-table.alignwide {
-    margin-left: var(--padding-container-horizontal);
-    margin-right: var(--padding-container-horizontal);
+    margin-left: 0;
+    margin-right: 0;
     width: calc(100% - calc(var(--padding-container-horizontal) * 2));
   }
 }
